# ai-agent-playground

./: README.md
.claude/skills/ai-solution-design/: ai-solution-design.md
.claude/skills/guido-python/: README.md  guido-python.md
agent-base/: .env.example  .gitignore  README.md  mix.exs
agent-base/config/: dev.exs  prod.exs  runtime.exs  test.exs
agent-base/lib/: agent_base.ex
agent-base/lib/agent_base/: application.ex
agent-base/lib/agent_base/examples/: llm_example.ex
agent-base/lib/agent_base/llm/: conversation.ex  openrouter.ex  stream.ex
agent-base/test/: agent_base_test.exs
agent-base/test/agent_base/llm/: conversation_test.exs  openrouter_test.exs
computer_use_agent/: .env.example  CODE_REVIEW_FIXES.md  LICENSE  MANIFEST.in  PRIMAGEN_FIXES.md  README.md  pyproject.toml  requirements-dev.txt
computer_use_agent/docs/: USAGE.md
computer_use_agent/examples/: basic_usage.py
computer_use_agent/src/computer_use_agent/: __init__.py  __main__.py  cli.py
computer_use_agent/src/computer_use_agent/config/: __init__.py  logging_config.py  settings.py
computer_use_agent/src/computer_use_agent/core/: __init__.py  agent.py  desktop.py
computer_use_agent/src/computer_use_agent/executors/: __init__.py  task_executor.py
computer_use_agent/src/computer_use_agent/models/: __init__.py  task.py
computer_use_agent/src/computer_use_agent/openai_integration/: __init__.py  client.py  tools.py
computer_use_agent/src/computer_use_agent/processors/: __init__.py  nlp_processor.py
computer_use_agent/tests/: __init__.py  conftest.py
computer_use_agent/tests/integration/: __init__.py
computer_use_agent/tests/unit/: test_desktop.py  test_task.py
wikipedia-offline-viewer/: PRIMEAGEN_REVIEW.md  PRIME_REVIEWS_CLAUDE.md  README.md
wikipedia-offline-viewer/claude/: DESIGN_NOTES.md  wiki_archiver.py
wikipedia-offline-viewer/day1/: wiki_download.py
wikipedia-offline-viewer/guido/: DESIGN_NOTES.md  wiki_archiver.py
wikipedia-offline-viewer/month1/: wikipedia_offline.py
wikipedia-offline-viewer/prime/: PRIME_REVIEW.md  wiki_archive.py
wikipedia-offline-viewer/week1/: wiki_downloader.py
wikipedia-offline-viewer/year1/: wiki_archiver.py
wikipedia-offline-viewer/year5/: requirements.txt  wiki_archiver_pro.py
